feat: 折叠面板，无标题时显示折叠箭头。组件存在于表单中，面板新增切换展示方式按钮 (#11067)
* feat: 折叠面板，无标题时显示折叠箭头。组件存在于表单中，面板新增切换展示方式按钮

* feat: 调整面板组件默认值

* feat: 调整无标题时，折叠箭头样式。调整面板配置

* 更新jest快照

--- a/packages/amis-ui/scss/components/_collapse.scss
+++ b/packages/amis-ui/scss/components/_collapse.scss
@@ -45,6 +45,15 @@
       color: var(--collapse-default-header-hover-color);
     }
 
+    &.noTitle {
+      padding: 0;
+      background-color: unset;
+      &:hover {
+        background: unset;
+        color: inherit;
+      }
+    }
+
     &.is-mobile {
       background: none;
       border-radius: 0 !important;
