feat: 锚点导航调整为sticky布局

--- a/examples/doc.css
+++ b/examples/doc.css
@@ -19,6 +19,7 @@
   position: relative;
   width: 100%;
   margin: 20px 0;
+  --affix-offset-top: 70px;
 }
 
 .doc-play-ground > .visibility-sensor {
