--- a/packages/amis-ui/scss/components/_anchor-nav.scss
+++ b/packages/amis-ui/scss/components/_anchor-nav.scss
@@ -1,6 +1,6 @@
 .#{$ns}AnchorNav {
   display: flex;
-  height: 100%;
+  min-height: px2rem(400px);
 
   &--vertical {
     .#{$ns}AnchorNav-link-wrap {
