--- a/packages/amis-editor-core/scss/control/_event-action.scss
+++ b/packages/amis-editor-core/scss/control/_event-action.scss
@@ -31,8 +31,14 @@
       width: 100%;
     }
   }
-  &-content-oldentry {
-    margin-top: 100px !important;
+  &-header-m {
+    margin-top: #{px2rem(45px)} !important;
+  }
+  &-content-m {
+    margin-top: #{px2rem(97px)} !important;
+  }
+  &-content-l {
+    margin-top: #{px2rem(150px)} !important;
   }
   &-content {
     padding: 0;
@@ -147,13 +153,31 @@
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
-            .variable-left {
-              color: #2468f2;
-              margin-left: #{px2rem(4px)};
-            }
-            .variable-right {
-              color: #2468f2;
-              margin-right: #{px2rem(4px)};
+            .action-desc {
+              display: flex;
+              .desc-tag {
+                max-width: 133px;
+                color: #2468f2;
+                display: inline-block;
+                margin-bottom: -5px;
+              }
+              .variable-left {
+                margin-left: #{px2rem(4px)};
+              }
+              .variable-right {
+                margin-right: #{px2rem(4px)};
+              }
+              .component-action-tag {
+                background-color: rgb(82, 142, 255);
+                display: inline-block;
+                color: #fff;
+                padding: 0 5px;
+                border-radius: 3px;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
+                width: 100%;
+              }
             }
           }
           &--dragging {
@@ -252,7 +276,7 @@
   }
 }
 
-.action-config-dialog {
+.ae-action-config-dialog {
   *:not(svg) {
     font-size: 12px;
   }
@@ -423,7 +447,7 @@
   }
 }
 
-.event-item-header-tip {
+.ae-event-item-header-tip {
   background: #070c14d9 !important;
   box-shadow: 0 px2rem(2px) px2rem(8px) 0 rgba(7, 12, 20, 0.12);
   border: none;
@@ -431,13 +455,16 @@
     font-size: 12px;
     color: #fff;
   }
-}
-
-.event-item-header-tip {
   & > div {
     &:after {
       border-top-color: #070c14d9 !important;
       border-bottom-color: #070c14d9 !important;
     }
   }
+}
+
+.ae-action-relation-panel {
+  width: 255px;
+  max-height: 360px;
+  overflow: auto;
 }
