--- a/packages/amis-ui/scss/_components.scss
+++ b/packages/amis-ui/scss/_components.scss
@@ -1298,7 +1298,7 @@
   );
   @include borderWidth(--checkbox-checkbox-default, var(--borders-width-2));
   @include borderStyle(--checkbox-checkbox-default, var(--borders-style-2));
-  @include borderRadius(--checkbox-checkbox-default, var(--sizes-size-2));
+  @include borderRadius(--checkbox-checkbox-default, var(--borders-radius-2));
 
   --checkbox-checkbox-hover-height: var(--sizes-size-9);
   --checkbox-checkbox-hover-bg-color: var(--colors-neutral-fill-11);
@@ -1307,7 +1307,7 @@
   @include borderColor(--checkbox-checkbox-hover, var(--colors-brand-5));
   @include borderWidth(--checkbox-checkbox-hover, var(--borders-width-2));
   @include borderStyle(--checkbox-checkbox-hover, var(--borders-style-2));
-  @include borderRadius(--checkbox-checkbox-hover, var(--sizes-size-2));
+  @include borderRadius(--checkbox-checkbox-hover, var(--borders-radius-2));
 
   --checkbox-checkbox-active-height: var(--sizes-size-9);
   --checkbox-checkbox-active-bg-color: var(--colors-neutral-fill-11);
@@ -1316,7 +1316,7 @@
   @include borderColor(--checkbox-checkbox-active, var(--colors-brand-5));
   @include borderWidth(--checkbox-checkbox-active, var(--borders-width-2));
   @include borderStyle(--checkbox-checkbox-active, var(--borders-style-2));
-  @include borderRadius(--checkbox-checkbox-active, var(--sizes-size-2));
+  @include borderRadius(--checkbox-checkbox-active, var(--borders-radius-2));
 
   --checkbox-checkbox-disabled-height: var(--sizes-size-9);
   --checkbox-checkbox-disabled-bg-color: var(--colors-neutral-fill-10);
@@ -1328,47 +1328,50 @@
   );
   @include borderWidth(--checkbox-checkbox-disabled, var(--borders-width-2));
   @include borderStyle(--checkbox-checkbox-disabled, var(--borders-style-2));
-  @include borderRadius(--checkbox-checkbox-disabled, var(--sizes-size-2));
+  @include borderRadius(--checkbox-checkbox-disabled, var(--borders-radius-2));
 
   --checkbox-checked-default-height: var(--sizes-size-9);
   --checkbox-checked-default-bg-color: var(--colors-brand-5);
-  --checkbox-checked-default-color: var(--colors-neutral-text-2);
+  --checkbox-checked-default-text-color: var(--colors-neutral-text-2);
   --checkbox-checked-default-fontSize: var(--fonts-size-7);
-  --checkbox-checked-default-icon-size: var(--sizes-size-5);
+  --checkbox-checked-default-icon-size: var(--sizes-size-8);
+  --checkbox-checked-default-icon-color: var(--colors-neutral-fill-11);
+  --checkbox-checked-default-icon: '<svg viewBox="0 0 1024 1024"><path d="M806.784 295.744l45.248 45.184-362.112 362.048-45.184 45.312-226.24-226.24 45.184-45.184 180.992 180.928z" fill="currentColor"></path></svg>';
   @include borderColor(--checkbox-checked-default, var(--colors-brand-5));
   @include borderWidth(--checkbox-checked-default, var(--borders-width-2));
   @include borderStyle(--checkbox-checked-default, var(--borders-style-2));
-  @include borderRadius(--checkbox-checked-default, var(--sizes-size-2));
+  @include borderRadius(--checkbox-checked-default, var(--borders-radius-2));
 
   --checkbox-checked-hover-height: var(--sizes-size-9);
   --checkbox-checked-hover-bg-color: var(--colors-brand-6);
-  --checkbox-checked-hover-color: var(--colors-neutral-text-2);
+  --checkbox-checked-hover-text-color: var(--colors-neutral-text-2);
   --checkbox-checked-hover-fontSize: var(--fonts-size-7);
   @include borderColor(--checkbox-checked-hover, var(--colors-brand-6));
   @include borderWidth(--checkbox-checked-hover, var(--borders-width-2));
   @include borderStyle(--checkbox-checked-hover, var(--borders-style-2));
-  @include borderRadius(--checkbox-checked-hover, var(--sizes-size-2));
+  @include borderRadius(--checkbox-checked-hover, var(--borders-radius-2));
 
   --checkbox-checked-active-height: var(--sizes-size-9);
   --checkbox-checked-active-bg-color: var(--colors-brand-4);
-  --checkbox-checked-active-color: var(--colors-neutral-text-2);
+  --checkbox-checked-active-text-color: var(--colors-neutral-text-2);
   --checkbox-checked-active-fontSize: var(--fonts-size-7);
   @include borderColor(--checkbox-checked-active, var(--colors-brand-5));
   @include borderWidth(--checkbox-checked-active, var(--borders-width-2));
   @include borderStyle(--checkbox-checked-active, var(--borders-style-2));
-  @include borderRadius(--checkbox-checked-active, var(--sizes-size-2));
+  @include borderRadius(--checkbox-checked-active, var(--borders-radius-2));
 
   --checkbox-checked-disabled-height: var(--sizes-size-9);
-  --checkbox-checked-disabled-bg-color: var(--colors-neutral-fill-11);
-  --checkbox-checked-disabled-color: var(--colors-neutral-text-2);
+  --checkbox-checked-disabled-bg-color: var(--colors-neutral-fill-10);
+  --checkbox-checked-disabled-text-color: var(--colors-neutral-text-6);
   --checkbox-checked-disabled-fontSize: var(--fonts-size-7);
+  --checkbox-checked-disabled-icon-color: var(--colors-neutral-fill-6);
   @include borderColor(
     --checkbox-checked-disabled,
     var(--colors-neutral-line-8)
   );
   @include borderWidth(--checkbox-checked-disabled, var(--borders-width-2));
   @include borderStyle(--checkbox-checked-disabled, var(--borders-style-2));
-  @include borderRadius(--checkbox-checked-disabled, var(--sizes-size-2));
+  @include borderRadius(--checkbox-checked-disabled, var(--borders-radius-2));
 
   --checkbox-button-default-height: var(--sizes-base-16);
   --checkbox-button-font-size: var(--fonts-size-7);
@@ -1388,16 +1391,24 @@
   @include borderColor(--checkbox-button-hover, var(--colors-brand-5));
 
   --checkbox-button-checked-color: var(--colors-brand-5);
-  --checkbox-button-checked-icon-color: var(--colors-brand-5);
-  --checkbox-button-checked-icon-i-color: var(--colors-neutral-fill-11);
+  --checkbox-button-checked-icon-bg-size: var(--sizes-size-9);
+  --checkbox-button-checked-icon-bg-color: var(--colors-brand-5);
+  --checkbox-button-checked-icon-size: var(--sizes-size-8);
+  --checkbox-button-checked-icon-color: var(--colors-neutral-fill-11);
   @include borderColor(--checkbox-button-checked, var(--colors-brand-5));
 
   --checkbox-button-checked-hover-color: var(--colors-brand-6);
-  --checkbox-button-checked-hover-icon-color: var(--colors-brand-6);
+  --checkbox-button-checked-hover-icon-bg-size: var(--sizes-size-9);
+  --checkbox-button-checked-hover-icon-bg-color: var(--colors-brand-6);
+  --checkbox-button-checked-hover-icon-size: var(--sizes-size-8);
+  --checkbox-button-checked-hover-icon-color: var(--colors-neutral-fill-11);
   @include borderColor(--checkbox-button-checked-hover, var(--colors-brand-6));
 
   --checkbox-button-checked-active-color: var(--colors-brand-4);
-  --checkbox-button-checked-active-icon-color: var(--colors-brand-4);
+  --checkbox-button-checked-active-icon-bg-size: var(--sizes-size-9);
+  --checkbox-button-checked-active-icon-bg-color: var(--colors-brand-4);
+  --checkbox-button-checked-active-icon-size: var(--sizes-size-8);
+  --checkbox-button-checked-active-icon-color: var(--colors-neutral-fill-11);
   @include borderColor(--checkbox-button-checked-active, var(--colors-brand-4));
 
   --checkbox-button-disabled-unchecked-color: var(--colors-neutral-text-6);
@@ -1407,12 +1418,17 @@
     var(--colors-neutral-line-8)
   );
 
-  --checkbox-button-disabled-checked-color: var(--colors-neutral-text-6);
-  --checkbox-button-disabled-checked-bg-color: var(--colors-neutral-fill-10);
-  --checkbox-button-disabled-checked-icon-color: var(--colors-neutral-text-6);
+  --checkbox-button-disabled-checked-color: var(--colors-neutral-text-5);
+  --checkbox-button-disabled-checked-bg-color: var(--colors-neutral-fill-8);
+  --checkbox-button-disabled-checked-icon-bg-size: var(--sizes-size-9);
+  --checkbox-button-disabled-checked-icon-bg-color: var(
+    --colors-neutral-fill-6
+  );
+  --checkbox-button-disabled-checked-icon-size: var(--sizes-size-8);
+  --checkbox-button-disabled-checked-icon-color: var(--colors-neutral-fill-11);
   @include borderColor(
     --checkbox-button-disabled-checked,
-    var(--colors-neutral-line-8)
+    var(--colors-neutral-line-7)
   );
 
   --Checkbox-onHover-color: var(--checkbox-checked-default-bg-color);
@@ -1857,14 +1873,17 @@
   --radio-default-hover-text-color: var(--colors-neutral-text-1);
   --radio-default-hover-bg-color: var(--colors-neutral-fill-11);
 
-  --radio-default-checked-point-inner-size: var(--sizes-size-5);
+  --radio-default-checked-icon-size: var(--sizes-size-5);
+  --radio-default-checked-icon-color: var(--colors-neutral-fill-11);
+  --radio-default-checked-icon: '<svg viewBox="0 0 1024 1024"><path d="M512 512m-512 0a512 512 0 1 0 1024 0 512 512 0 1 0-1024 0Z" fill="currentColor"></path></svg>';
   --radio-default-checked-color: var(--colors-brand-5);
   --radio-default-checked-text-color: var(--colors-neutral-text-1);
   --radio-default-checked-bg-color: var(--colors-neutral-fill-11);
 
-  --radio-default-disabled-color: var(--colors-neutral-text-6);
+  --radio-default-disabled-color: var(--colors-neutral-line-8);
+  --radio-default-disabled-icon-color: var(--colors-neutral-fill-7);
   --radio-default-disabled-text-color: var(--colors-neutral-text-6);
-  --radio-default-disabled-bg-color: var(--colors-neutral-fill-8);
+  --radio-default-disabled-bg-color: var(--colors-neutral-fill-10);
 
   @include margin(
     --radio-default-vertical,
