style: 调整区域展示样式避免挡住内容

--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -1430,7 +1430,7 @@
   > .region-tip {
     position: absolute;
     right: 50%;
-    top: -19px;
+    top: -17px;
     transform: translateX(50%);
     background: $Editor-rgion-bg; // $Editor-rgion-bg;
     color: #fff;
@@ -1482,11 +1482,11 @@
   }
 
   // 兼容方案，避免便签被遮挡: 区域仅有 [内容区]，头部标签放内部展示
-  > div.region-tip.is-only-child-region,
-  &.region-label-within > .region-tip {
-    top: 1px;
-    border-radius: 0 0 3px 3px;
-  }
+  // > div.region-tip.is-only-child-region,
+  // &.region-label-within > .region-tip {
+  //   top: 1px;
+  //   border-radius: 0 0 3px 3px;
+  // }
 
   // 高亮区域hover态
   &.region-hover {
